2009-06-12  Massimiliano Mantione <massi@ximian.com>
	* EventProcessor.cs, ObjectModel.cs (StackTrace): Got rid of static
	fields when handling call stack creation, and introduced a proper
	factory instead.

2009-06-12  Massimiliano Mantione <massi@ximian.com>
	* ObjectModel.cs (CallStack.MethodExit and CallStack.PopMethod):
	properly merged the fix for call stack execution time attribution.

2009-06-12  Massimiliano Mantione <massi@ximian.com>
	* ObjectModel.cs: added method execution time accounting on
	individual stack frames in the call tree.

2009-06-09  Mike Kestner <mkestner@novell.com>
	* ObjectModel.cs: commit Massi's calls StackTrace logging.

2009-05-21  Mike Kestner <mkestner@novell.com>
	* *: replace MD 1.0 solution files with 2.0 msbuild files, and turn
	on makefile synchronization instead of generated makefiles.

2009-04-06  Massimiliano Mantione <massi@ximian.com>
	* BaseTypes.cs, Decoder.cs, ObjectModel.cs, EventProcessor.cs:
	Added support for monitor profiling.

2009-03-17  Massimiliano Mantione <massi@ximian.com>
	* ObjectModel.cs: In "IHeapItemSetStatisticsSubject.Description"
	implementations return the full method name.

2009-03-16  Massimiliano Mantione <massi@ximian.com>
	* ObjectModel.cs: fixed description string of "referenced by" subset.

2009-01-17  Massimiliano Mantione <massi@ximian.com>
	* BaseTypes.cs: Added "Region" property to IExecutableMemoryRegion, so
	that it is possible to set the region when we load the elf file, and
	use it in "BaseExecutableMemoryRegion.NewFunction".
	* Decoder.cs, ObjectModel.cs, NativeLibraryReader.cs: Likewise.

2008-12-29  Massimiliano Mantione <massi@ximian.com>
	* ObjectModel.cs: fixed call stack array resize condition.

2008-12-01  Massimiliano Mantione <massi@ximian.com>
	* ObjectModel.cs:
	- Added interface IHeapItemSetStatisticsSubject to represents criteria
	by which heap item sets can be examined, implemented by LoadedClass,
	StackTrace and LoadedMethod.