@@ -1,3 +1,7 @@
+2009-06-18  Massimiliano Mantione <massi@ximian.com>
+	* BaseTypes.cs, Decoder.cs, ObjectModel.cs, EventProcessor.cs:
+	Added assembly information to classes and wrapper flag to methods.
+
 2009-06-12  Massimiliano Mantione <massi@ximian.com>
 	* EventProcessor.cs, ObjectModel.cs (StackTrace): Got rid of static
 	fields when handling call stack creation, and introduced a proper
